# Deep-Training-For-TOEIC-Backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: supabase-keepalive.yml
app/: config.py  data.py  main.py  models.py
app/dependencies/: auth.py
app/prompts/: coach.py
app/rag/: knowledge.py
app/repositories/: adherent_repository.py
app/services/: ai_gateway.py  supabase_client.py
scripts/: check_rag_quality.py  delete_bad_rag_chunk.py  test_backend_rag_module.py
supabase/: schema.sql
