[project]
name = "deeptraining-toeic-api"
version = "0.1.0"
description = "Backend API for Deep Training For TOEIC"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "supabase>=2.15.0,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
